@@ -1,16 +1,16 @@
 package dev.zeddevstuff.keybindspurger;
 
-import com.mojang.logging.LogUtils;
-import net.minecraft.client.gui.screens.controls.KeyBindsScreen;
-import org.slf4j.Logger;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.TranslatableComponent;
 
+import java.util.Arrays;
 import java.util.List;
 
 public final class Keybindspurger
 {
     public static final String MOD_ID = "keybindspurger";
-    public static final Logger LOGGER = LogUtils.getLogger();
-    public static final List<String> VANILLA_KEYBINDS = List.of(
+    public static final List<String> VANILLA_KEYBINDS = Arrays.asList(
         "key.attack",
         "key.use",
         "key.forward",
@@ -48,8 +48,65 @@ public final class Keybindspurger
         "key.modmenu.open_menu"
     );
 
-    public static void init()
+    private static Component PURGE = null;
+    public static Component getPURGE()
     {
+        if(PURGE == null)
+        {
+            if(new TranslatableComponent("button.keybindspurger.purge").getString().equals("button.keybindspurger.purge"))
+            {
+                PURGE = new TextComponent("Purge all keybinds in this category");
+            }
+            else PURGE = new TranslatableComponent("button.keybindspurger.purge");
+        }
+        return PURGE;
+    }
+    private static Component ALL = null;
+
+    public static Component getALL()
+    {
+        if(ALL == null)
+        {
+            if(new TranslatableComponent("button.keybindspurger.purge_all").getString().equals("button.keybindspurger.purge_all"))
+            {
+                ALL = new TextComponent("Purge all keybinds");
+            }
+            else ALL = new TranslatableComponent("button.keybindspurger.purge_all");
+        }
+        return ALL;
+    }
+
+    private static Component NON_VANILLA = null;
+
+    public static Component getNON_VANILLA()
+    {
+        if(NON_VANILLA == null)
+        {
+            if(new TranslatableComponent("button.keybindspurger.purge_non_vanilla").getString().equals("button.keybindspurger.purge_non_vanilla"))
+            {
+                NON_VANILLA = new TextComponent("Purge all non-vanilla keybinds");
+            }
+            else NON_VANILLA = new TranslatableComponent("button.keybindspurger.purge_non_vanilla");
+        }
+        return NON_VANILLA;
+    }
+
+    private static Component RESET = null;
+
+    public static Component getRESET()
+    {
+        if(RESET == null)
+        {
+            if(new TranslatableComponent("button.keybindspurger.reset").getString().equals("button.keybindspurger.reset"))
+            {
+                RESET = new TextComponent("Reset all keybinds in this category");
+            }
+            else RESET = new TranslatableComponent("button.keybindspurger.reset");
+        }
+        return RESET;
+    }
+    
+    public static void init() {
         // Write common init code here.
     }
 }
